# pastebin_lambda

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: errors.rs  main.rs  models.rs
src/db/: mod.rs
src/handlers/: create.rs  delete.rs  list.rs  read.rs  update.rs
