[package]
name = "pastebin_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13.0"
once_cell = "1.20.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros"] }
uuid = { version = "1.13.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
